appId: com.example.concordia_nav
---
- launchApp:
    clearState: true
- assertVisible: "Indoor directions"
- tapOn: "Indoor directions"
- assertVisible: "Indoor Directions"
