appId: com.example.concordia_nav
---
- launchApp:
    clearState : true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- assertVisible: "Accessibility"
- tapOn: "Accessibility"
- assertVisible: "Accessibility"
- tapOn: "Accessibility"
- assertVisible: "Visual Accessibility"
- tapOn: "Visual Accessibility"
- tapOn: "Visual Accessibility"
- assertVisible: "Hearing Accessibility"
- tapOn: "Hearing Accessibility"
- tapOn: "Hearing Accessibility"
- assertVisible: "Physical and Motor Accessibility"
- tapOn: "Physical and Motor Accessibility"
- tapOn: "Physical and Motor Accessibility"
- assertVisible: "Cognitive Accessibility"
- tapOn: "Cognitive Accessibility"
- tapOn: "Cognitive Accessibility"
- assertVisible: "General Accessibility"
- tapOn: "General Accessibility"
- tapOn: "General Accessibility"
