appId: com.example.concordia_nav
---
- launchApp:
    clearState : true
- tapOn: "SGW map"
- assertVisible: Google Map
- swipe:
    direction: LEFT
    duration: 2000
- swipe:
    direction: RIGHT
    duration: 2000
