appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- tapOn: "Contact"
