appId: com.example.concordia_nav
---
- setLocation:
    latitude: 45.4895
    longitude: -73.7797
- launchApp:
    clearState: true
- assertVisible: "Concordia Campus Guide"
- tapOn:
    point: "7%,9%"
- tapOn: "Guide"
- tapOn:
    point: "50%,28%"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "50%,42%"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "50%,57%"
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "50%,71%"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- tapOn:
    point: "7%,9%"
- tapOn:
    point: "50%,86%"
- swipe:
    direction: UP
    duration: 2000
- swipe:
    direction: DOWN
    duration: 2000
- tapOn:
    point: "7%,9%"
